--- a/styles/global.css
+++ b/styles/global.css
@@ -31,6 +31,8 @@
   --fs-xl: 1.5rem;
   --fs-2xl: 2.5rem;
 
+  --px-lg: 1.5rem;
+
 
 }
 
@@ -79,5 +81,7 @@ ul[role="list"] {
     --fs-lg: 2rem;
     --fs-xl: 3rem;
     --fs-2xl: 4rem;
+
+    --px-lg: 2rem;
   }
 }
